<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TAU" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter Your City " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eFW-4R-D9X" userLabel="enter City">
                                <rect key="frame" x="109" y="324.5" width="171" height="32"/>
                                <accessibility key="accessibilityConfiguration" identifier="enterCity"/>
                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wvd-B2-mZv" userLabel="city Value">
                                <rect key="frame" x="189" y="422.5" width="36" height="51.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="city"/>
                                <fontDescription key="fontDescription" type="system" pointSize="35"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H9p-mP-Amt" userLabel="enroll">
                                <rect key="frame" x="25" y="542" width="369" height="41"/>
                                <color key="backgroundColor" red="1" green="0.4687319969347471" blue="0.26311417288637096" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="enrollButton"/>
                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                <size key="titleShadowOffset" width="1" height="0.0"/>
                                <state key="normal" title="Enroll">
                                    <color key="titleColor" red="1" green="0.94867268869999999" blue="0.18101593690000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="enrollButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yFa-Zc-XMx"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hYa-Pl-TPc" userLabel="thanks Message">
                                <rect key="frame" x="25" y="651" width="369" height="27.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="TAU" translatesAutoresizingMaskIntoConstraints="NO" id="jGA-iB-3kK">
                                <rect key="frame" x="164" y="710" width="90" height="90"/>
                                <accessibility key="accessibilityConfiguration" identifier="TAUlogo">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to XCUITest" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="49w-Xj-u7T" userLabel="welcome ToXCUI Test">
                                <rect key="frame" x="107" y="224.5" width="207" height="26.5"/>
                                <color key="backgroundColor" red="0.27145191120000001" green="1" blue="0.12615127810000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="welcomeMessage"/>
                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <constraints>
                            <constraint firstItem="hYa-Pl-TPc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="25" id="7JR-9B-J4q"/>
                            <constraint firstItem="eFW-4R-D9X" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="-12.5" id="AOm-aE-zRs"/>
                            <constraint firstItem="wvd-B2-mZv" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="EP9-IX-G6K"/>
                            <constraint firstItem="49w-Xj-u7T" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="3.5" id="FvQ-q5-m8V"/>
                            <constraint firstItem="H9p-mP-Amt" firstAttribute="top" secondItem="wvd-B2-mZv" secondAttribute="bottom" constant="68" id="KYg-nV-FDV"/>
                            <constraint firstItem="H9p-mP-Amt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="25" id="OTZ-xD-9lE"/>
                            <constraint firstItem="eFW-4R-D9X" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-107.5" id="YbM-yL-NPv"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="H9p-mP-Amt" secondAttribute="trailing" constant="20" id="ZP7-xS-SKm"/>
                            <constraint firstItem="49w-Xj-u7T" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-210.5" id="cBV-Oh-IPr"/>
                            <constraint firstItem="jGA-iB-3kK" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="307" id="g6o-ng-kqs"/>
                            <constraint firstItem="wvd-B2-mZv" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="pKU-nT-Pu0"/>
                            <constraint firstItem="jGA-iB-3kK" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="2" id="tpu-qA-Kh0"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="hYa-Pl-TPc" secondAttribute="trailing" constant="20" id="xVp-gv-00V"/>
                            <constraint firstItem="hYa-Pl-TPc" firstAttribute="top" secondItem="H9p-mP-Amt" secondAttribute="bottom" constant="68" id="zHH-6z-DPC"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="CityValue" destination="wvd-B2-mZv" id="npE-32-aJ4"/>
                        <outlet property="EnterCity" destination="eFW-4R-D9X" id="mKJ-vG-3Si"/>
                        <outlet property="ThanksMessage" destination="hYa-Pl-TPc" id="oDQ-Da-WNO"/>
                        <outlet property="WelcomeToXCUITest" destination="49w-Xj-u7T" id="444-5c-MWu"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="133.59999999999999" y="103.89805097451276"/>
        </scene>
    </scenes>
    <resources>
        <image name="TAU" width="90" height="90"/>
    </resources>
</document>
